reduce size of #handle to prevent cutting off

--- a/css/default.css
+++ b/css/default.css
@@ -153,7 +153,7 @@
 
 	#handle
 	{
-		font-size: .5em;
+		font-size: .39em;
 		color: #2B3F48;
 	}
 
